Nav Fix
If the screen was too wide, the buttons would double up

--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -5,7 +5,9 @@ nav #button_current #front{
 }
 
 nav{
-    width: auto;
+    width: 30vh;
+
+    margin: auto;
 
     text-align: center;
 }
